2005-04-12  Bruno coudoin  <bruno.coudoin@free.fr>

	Yves created 2 new activities by changeing the erase one.
	Now we have a submenu in the computer menu to learn 
	mouse move, simple and double click

	Laurent fixed connect4 activity. No more bug clicking on a full column.

	menu.c fixed to find boardicon in it's local board directory
	
	* boards/Makefile.am:
	* boards/boardicons/erase_clic.png:
	* boards/boardicons/erase_double_clic.png:
	* boards/erase.xml.in:
	* boards/erase_clic.xml.in:
	* boards/erase_double_clic.xml.in:
	* boards/mouse.xml.in:
	* docs/C/python.xml: added GNU Bonus
	* po/POTFILES.in:
	* src/boards/erase.c: (start_board), (end_board), (set_level),
	(erase_next_level), (item_event):
	* src/boards/menu.c: (menu_create_item):
	* src/boards/py-mod-bonus.c: (python_gcompris_bonus_module_init):
	* src/boards/python/algorithm.py:
	* src/boards/python/connect4.py:
	* src/boards/python/connect4p/minmax.py:
	* src/boards/python/hexagon.py:

2005-04-11  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/sounds/sv/.cvsignore:
	* boards/sounds/sv/alphabet/.cvsignore:
	* boards/sounds/sv/colors/.cvsignore:
	* boards/sounds/sv/geography/.cvsignore:
	* boards/sounds/sv/misc/.cvsignore:
	* src/boards/python/connect4.py: fixed by Yves. There was a bug in case of a draw game.
	* src/gcompris/gameutil.c: (gcompris_get_board_from_section): By Yves, we can now run a single
	activity from the command line with for e.g -l /reading/imagename.
	* src/gcompris/interface.c: (create_gcompris_edit): removed unused menu that seems to crash 
	compilation on new distrib
	* src/gcompris/soundutil.c: (thread_play_ogg): fixed to search sound file in local board_dir as well

2005-04-11  Bruno coudoin  <bruno.coudoin@free.fr>

	By Yves and Bruno. Added 2 options to allow gcompris to be used with an external
	directory containing a complete independant activity. For e.g.
	gcompris -L /home/user/myboard  => add the activities in this dir to gcompris