@@ -52,7 +52,13 @@ static gint timer_id = 0;
 // Default Double clic distance to restore on exit.
 gint DefaultDoubleClicDistance;
 
-gint DoubleClicLevel[6]= { 1000, 750, 500, 400, 250, 150};
+gint DoubleClicLevel[6]= {  1000, 750, 600, 500, 400, 250};
+ 1000, 750, 600, 500, 400, 25
+#define NORMAL 0
+#define CLIC   1
+#define DOUBLECLIC 2
+
+gint board_mode =  NORMAL;
 
 // List of images to use in the game
 static gchar *imageList[] =
@@ -140,7 +146,14 @@ static void start_board (GcomprisBoard *agcomprisBoard)
       gcomprisBoard->number_of_sublevel=1; /* Go to next level after this number of 'play' */
       gcompris_bar_set(GCOMPRIS_BAR_LEVEL);
 
-      if (strcmp(gcomprisBoard->mode,"double_clic")==0){
+      if (strcmp(gcomprisBoard->mode,"double_clic")==0)
+	board_mode = DOUBLECLIC;
+      else if (strcmp(gcomprisBoard->mode,"clic")==0)
+	board_mode = CLIC;
+      else 
+	board_mode = NORMAL;
+
+      if (board_mode == DOUBLECLIC){
 	GtkSettings *DefaultsGtkSettings = gtk_settings_get_default ();
 
 	if (DefaultsGtkSettings == NULL) {
@@ -166,7 +179,7 @@ static void start_board (GcomprisBoard *agcomprisBoard)
 /* ======================================= */
 static void end_board ()
 {
-  if (strcmp(gcomprisBoard->mode,"double_clic")==0){
+  if (board_mode == DOUBLECLIC){
     gdk_display_set_double_click_time( gdk_display_get_default(),
 					   DefaultDoubleClicDistance);
     g_warning(_("Double clic value is now %d."),DefaultDoubleClicDistance);
@@ -189,8 +202,7 @@ static void set_level (guint level)
       gcomprisBoard->sublevel=1;
       erase_next_level();
     }
-  
-  if (strcmp(gcomprisBoard->mode,"double_clic")==0){
+  if (board_mode == DOUBLECLIC){
     gdk_display_set_double_click_time( gdk_display_get_default(),
 				       DoubleClicLevel[gcomprisBoard->level-1]);
     g_warning(_("Double clic value is now %d."),DoubleClicLevel[gcomprisBoard->level-1]);
@@ -228,7 +240,8 @@ static void erase_next_level()
   gamewon = FALSE;
 
   /* Select level difficulty */
-  if (strcmp(gcomprisBoard->mode,"double_clic")==0){
+  
+  if (board_mode != NORMAL) {
     number_of_item_x = 5;
     number_of_item_y = 5;
   } else {
@@ -257,6 +270,7 @@ static void erase_destroy_all_items()
 static GnomeCanvasItem *erase_create_item()
 {
   int i,j;
+  int ix, jy;
   GnomeCanvasItem *item = NULL;
 
   boardRootItem = GNOME_CANVAS_GROUP(
@@ -268,10 +282,14 @@ static GnomeCanvasItem *erase_create_item()
 
   number_of_item = 0;
 
-  for(i=0; i<BOARDWIDTH; i+=BOARDWIDTH/number_of_item_x)
+  for(i=0,ix=0; i<BOARDWIDTH; i+=BOARDWIDTH/number_of_item_x, ix++)
     {
-      for(j=0; j<BOARDHEIGHT; j+=BOARDHEIGHT/number_of_item_y)
+      for(j=0, jy=0; j<BOARDHEIGHT; j+=BOARDHEIGHT/number_of_item_y, jy++)
 	{
+
+	  if ((board_mode != NORMAL) && ((ix+jy) %2 == 0))
+	    continue;
+
 	  item = gnome_canvas_item_new (boardRootItem,
 					gnome_canvas_rect_get_type (),
 					"x1", (double) i,
@@ -315,6 +333,12 @@ static void game_won()
       timer_id = gtk_timeout_add (2000, (GtkFunction) finished, NULL);
       return;
     }
+    if (board_mode == DOUBLECLIC){
+      gdk_display_set_double_click_time( gdk_display_get_default(),
+					 DoubleClicLevel[gcomprisBoard->level-1]);
+      g_warning(_("Double clic value is now %d."),DoubleClicLevel[gcomprisBoard->level-1]);
+    }
+
     gcompris_play_ogg ("bonus", NULL);
   }
   erase_next_level();
@@ -329,22 +353,22 @@ item_event(GnomeCanvasItem *item, GdkEvent *event, gpointer data)
   if(board_paused)
     return FALSE;
   
-  if (strcmp(gcomprisBoard->mode,"normal")==0)
+  if (board_mode == NORMAL)
     if (event->type != GDK_ENTER_NOTIFY)
       return FALSE;
 
-  if (strcmp(gcomprisBoard->mode,"clic")==0)
+  if (board_mode == CLIC)
     if (event->type != GDK_BUTTON_PRESS)
       return FALSE;
 
-  if (strcmp(gcomprisBoard->mode,"double_clic")==0)
+  if (board_mode == DOUBLECLIC)
     if ((event->type != GDK_BUTTON_PRESS) &
 	(event->type != GDK_2BUTTON_PRESS) &
 	(event->type != GDK_BUTTON_RELEASE))
       return FALSE;
 
 
-  if (strcmp(gcomprisBoard->mode,"double_clic")!=0){
+  if (board_mode != DOUBLECLIC){
     state = (GPOINTER_TO_INT (gtk_object_get_data (GTK_OBJECT (item), "state")));
     if(gcomprisBoard->level>2)
       {
