@@ -1,3 +1,8 @@
+2005-04-15  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* src/boards/erase.c: (start_board), (end_board), (set_level),
+	(erase_next_level), (erase_create_item), (game_won), (item_event): tuned level difficulty by Yves
+
 2005-04-12  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Yves created 2 new activities by changeing the erase one.
